<resources>
    <string name="app_name">TTS Server</string>

    <string name="permission_http_server_label">booting up TTS HTTP server</string>
    <string name="permission_http_server_description">Allows application to run HTTP server which provides a TTS services.</string>

    <string name="main_activity_server_status_down">The server is down</string>
    <string name="main_activity_server_status_up">The server is up: %1$s</string>
    <string name="main_activity_prompt_to_run">Tap power on button to run the server</string>
    <string name="main_activity_prompt_to_stop">Tap power off button to stop the server</string>

    <string name="service_notification_category_name">HTTP Server</string>
    <string name="service_notification_category_description">The fixed notification keeping the HTTP server alive</string>
    <string name="service_notification_title">Server is running</string>
    <string name="service_notification_text">The HTTP server is listening on address %1$s</string>

    <string name="title_activity_preferences">Settings</string>
    <string name="preference_port_summary">The desired port on which HTTP server is intended to listening</string>
    <string name="preference_port_title">Server port</string>
    <string name="preference_enable_say_endpoint_summary">Allow HTTP clients to use /say endpoint which enables them to say message using builtin speakers or external ones connected to the device</string>
    <string name="preference_enable_say_endpoint_title">Enable /say endpoint</string>
    <string name="preference_enable_file_endpoints_summary">Allow HTTP clients to use file endpoints (/wav, /mp3, /flac etc.) which enables them to retrieve TTS message as audio file</string>
    <string name="preference_enable_file_endpoints_title">Enable file endpoints</string>
    <string name="preference_enable_sonos_endpoint_summary">Allow HTTP clients to use /sonos endpoint which enables them to send TTS messages directly to Sonos devices</string>
    <string name="preference_enable_sonos_endpoint_title">Enable /sonos endpoint</string>
    <string name="preference_http_debug_summary">Attach the stacktrace to each error HTTP response if available</string>
    <string name="preference_http_debug_title">Enable HTTP debugging</string>
    <string name="preference_gong_picker_prompt">Choose a gong file</string>
    <string name="preference_enable_gong_summary">Play a signal gong before the announcement</string>
    <string name="preference_enable_gong_title">Enable gong</string>
    <string name="preference_tts_summary">Go to platform\'s TTS engine settings and adjust its parameters</string>
    <string name="preference_tts_title">TTS engine settings</string>
    <string name="preference_enable_speakers_silence_scheduler_summary">Determine a time range when /say endpoint should be disabled</string>
    <string name="preference_enable_speakers_silence_scheduler_title">Enable silence scheduler</string>
    <string name="preference_enable_sonos_silence_scheduler_summary">Determine a time range when /sonos endpoint should be disabled</string>
    <string name="preference_enable_sonos_silence_scheduler_title">Enable silence scheduler</string>
    <string name="preference_invalidate_sonos_cache_summary">Clear application cache directory from already generated Sonos TTS data for given sentences. You typically want to do it when you change the TTS engine\'s voice settings.</string>
    <string name="preference_invalidate_sonos_cache_title">Invalidate Sonos cache</string>
    <string name="preference_category_server">Server</string>
    <string name="preference_category_features">Features</string>
    <string name="preference_category_tts">TTS engine</string>
    <string name="preference_category_speakers">Speakers</string>
    <string name="preference_category_sonos">Sonos</string>
    <string name="preference_invalidate_sonos_cache_toast">Sonos cache has been invalidated</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>

    <string name="error_title">Error</string>
    <string name="error_invalid_endpoint_script">Skipping %1$s file because of error:\n%2$s</string>
</resources>
