<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/preference_category_server" app:iconSpaceReserved="false">
        <io.bartek.ttsserver.preference.IntEditTextPreference
            android:defaultValue="8080"
            android:inputType="number"
            android:key="preference_port"
            android:summary="@string/preference_port_summary"
            android:title="@string/preference_port_title"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_enable_say_endpoint"
            android:summary="@string/preference_enable_say_endpoint_summary"
            android:title="@string/preference_enable_say_endpoint_title"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_enable_wave_endpoint"
            android:summary="@string/preference_enable_wave_endpoint_summary"
            android:title="@string/preference_enable_wave_endpoint_title"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_enable_sonos_endpoint"
            android:summary="@string/preference_enable_sonos_endpoint_summary"
            android:title="@string/preference_enable_sonos_endpoint_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_tts" app:iconSpaceReserved="false">
        <Preference
            android:key="preference_tts"
            android:summary="@string/preference_tts_summary"
            android:title="@string/preference_tts_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>


</androidx.preference.PreferenceScreen>